# test-work

./: pyproject.toml
src/app/domain/common/: entity.py  exception.py  value_objects.py
